service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitness
  namespace: fitness
  labels:
    app: fitness
spec:
  selector:
    app: fitness
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
